--- a/index.html
+++ b/index.html
@@ -99,51 +99,253 @@
     <section class="destinations">
         <h1>TOUR NỔI BẬT - ĐỪNG BỎ LỠ</h1>
         <p>Khám phá những điểm đến tuyệt vời và trải nghiệm những chuyến đi đáng nhớ với ChipTrip!</p>
-        <div class="destinations-content">
-            <div class="destination-info">
-                <img src="img/info/des_banner/tokyo.jpg" alt="Vịnh Tokyo">
-                <div class="title">
-                    <h2>Tokyo - Cổ xưa và hiện đại</h2>
+        <div class="carousel-container">
+            <button class="carousel-btn prev" onclick="plusSlides(-1)">&#10094;</button>
+            <div class="destinations-content">
+                <div class="destination-info carousel-slide">
+                    <img src="img/info/des_banner/tokyo.jpg" alt="Vịnh Tokyo">
+                    <div class="title">
+                        <h2>Tokyo - Cổ xưa và hiện đại</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>25.000.000đ</span>
+                    </div>
+                    <a href="destinations/oversea/tokyo.html" class="book-btn">Đặt tour</a>
                 </div>
-                <div>
-                    <p>Khởi hành: Hà Nội</p>
+                <div class="destination-info carousel-slide">
+                    <img src="img/destinations/halong.jpg" alt="Vịnh Hạ Long">
+                    <div class="title">
+                        <h2>Vịnh Hạ Long</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>4.500.000đ</span>
+                    </div>
+                    <a href="destinations/domestic/vinh_ha_long.html" class="book-btn">Đặt tour</a>
                 </div>
-                <div class="price">
-                    <p>Giá từ:</p>
-                    <span>25.000.000đ</span>
+                <div class="destination-info carousel-slide">
+                    <img src="img/info/des_banner/paris.jpg" alt="Tour Paris">
+                    <div class="title">
+                        <h2>Paris - Kinh đô ánh sáng</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>45.000.000đ</span>
+                    </div>
+                    <a href="destinations/oversea/paris.html" class="book-btn">Đặt tour</a>
                 </div>
-                <a href="#" class="book-btn">Đặt tour</a>
+                <div class="destination-info carousel-slide">
+                    <img src="img/info/des_banner/rio.jpg" alt="Vịnh Tokyo">
+                    <div class="title">
+                        <h2>Rio de Janeiro - Thành phố lễ hội</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>70.000.000đ</span>
+                    </div>
+                    <a href="destinations/oversea/rio.html" class="book-btn">Đặt tour</a>
+                </div>
+                <div class="destination-info carousel-slide">
+                    <img src="img/info/des_banner/hagiang.png" alt="Vịnh Hạ Long">
+                    <div class="title">
+                        <h2>Hà Giang - Lũng Cú - Đồng Văn</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>3.990.000đ</span>
+                    </div>
+                    <a href="destinations/domestic/hagiang-lungcu-dongvan.html" class="book-btn">Đặt tour</a>
+                </div>
+                <div class="destination-info carousel-slide">
+                    <img src="img/info/des_banner/bangkok.jpg" alt="Tour Bangkok">
+                    <div class="title">
+                        <h2>Bangkok - Thành phố của những nụ cười</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>15.000.000đ</span>
+                    </div>
+                    <a href="destinations/oversea/bangkok.html" class="book-btn">Đặt tour</a>
+                </div>
+                <div class="destination-info carousel-slide">
+                    <img src="img/info/des_banner/london.jpg" alt="Vịnh Tokyo">
+                    <div class="title">
+                        <h2>London - Thành phố sương mù</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>55.000.000đ</span>
+                    </div>
+                    <a href="destinations/oversea/london.html" class="book-btn">Đặt tour</a>
+                </div>
+                <div class="destination-info carousel-slide">
+                    <img src="img/info/des_banner/hagiang.png" alt="Vịnh Hạ Long">
+                    <div class="title">
+                        <h2>Cao Bằng - Thác Bản Giốc - Ba Bề</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>4.290.000đ</span>
+                    </div>
+                    <a href="destinations/domestic/cao_bang_thac_ban_gioc_be_be.html" class="book-btn">Đặt tour</a>
+                </div>
+                <div class="destination-info carousel-slide">
+                    <img src="img/info/des_banner/losangeles.jpg" alt="Tour Bangkok">
+                    <div class="title">
+                        <h2>Los Angeles - Thành phố thiên thần</h2>
+                    </div>
+                    <div>
+                        <p>Khởi hành: Hà Nội</p>
+                    </div>
+                    <div class="price">
+                        <p>Giá từ:</p>
+                        <span>65.000.000đ</span>
+                    </div>
+                    <a href="destinations/oversea/los_angeles.html" class="book-btn">Đặt tour</a>
+                </div>
             </div>
-            <div class="destination-info">
-                <img src="img/destinations/halong.jpg" alt="Vịnh Hạ Long">
-                <div class="title">
-                    <h2>Vịnh Hạ Long</h2>
-                </div>
-                <div>
-                    <p>Khởi hành: Hà Nội</p>
-                </div>
-                <div class="price">
-                    <p>Giá từ:</p>
-                    <span>4.500.000đ</span>
-                </div>
-                <a href="destinations/domestic/vinh_ha_long.html" class="book-btn">Đặt tour</a>
-            </div>
-            <div class="destination-info">
-                <img src="img/info/des_banner/paris.jpg" alt="Tour Paris">
-                <div class="title">
-                    <h2>Paris - Kinh đô ánh sáng</h2>
-                </div>
-                <div>
-                    <p>Khởi hành: Hà Nội</p>
-                </div>
-                <div class="price">
-                    <p>Giá từ:</p>
-                    <span>45.000.000đ</span>
-                </div>
-                <a href="#" class="book-btn">Đặt tour</a>
-            </div>
+            <button class="carousel-btn next" onclick="plusSlides(1)">&#10095;</button>
+        </div>
+        <div class="carousel-dots" style="text-align:center; margin-top:10px;">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
         </div>
     </section>
+    <style>
+        .carousel-container {
+            position: relative;
+            max-width: 100%;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .destinations-content {
+            width: 100%;
+            display: flex;
+            overflow: hidden;
+            justify-content: center;
+        }
+        .carousel-slide {
+            display: none;
+            min-width: 300px;
+            max-width: 350px;
+            margin: 0 10px;
+            flex-shrink: 0;
+            transition: transform 0.5s;
+        }
+        .carousel-btn {
+            background-color: rgba(0,0,0,0.3);
+            border: none;
+            color: white;
+            font-size: 2rem;
+            cursor: pointer;
+            padding: 8px 16px;
+            border-radius: 50%;
+            z-index: 2;
+            transition: background 0.2s;
+        }
+        .carousel-btn:hover {
+            background-color: rgba(0,0,0,0.6);
+        }
+        .carousel-btn.prev {
+            margin-right: 10px;
+        }
+        .carousel-btn.next {
+            margin-left: 10px;
+        }
+        .carousel-dots .dot {
+            height: 12px;
+            width: 12px;
+            margin: 0 3px;
+            background-color: #bbb;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.3s;
+            cursor: pointer;
+        }
+        .carousel-dots .dot.active {
+            background-color: #717171;
+        }
+        @media (max-width: 900px) {
+            .carousel-slide {
+                min-width: 90vw;
+                max-width: 95vw;
+            }
+        }
+    </style>
+    <script>
+        // Show 3 cards at a time, slide by 1
+        let slideIndex = 0;
+        const cardsToShow = 3;
+
+        function showSlides(n) {
+            let slides = document.getElementsByClassName("carousel-slide");
+            let dots = document.getElementsByClassName("dot");
+            let total = slides.length;
+
+            // Vòng lặp slideIndex
+            if (n < 0) slideIndex = total - cardsToShow;
+            else if (n > total - cardsToShow) slideIndex = 0;
+            else slideIndex = n;
+
+            // Hide all slides
+            for (let i = 0; i < total; i++) {
+                slides[i].style.display = "none";
+            }
+            // Show the current 3 slides
+            for (let i = slideIndex; i < slideIndex + cardsToShow && i < total; i++) {
+                slides[i].style.display = "block";
+            }
+            // Dots
+            for (let i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            if (dots[slideIndex]) dots[slideIndex].className += " active";
+        }
+
+        function plusSlides(n) {
+            showSlides(slideIndex + n);
+        }
+
+        function currentSlide(n) {
+            showSlides(n - 1);
+        }
+
+        // Initialize on DOMContentLoaded
+        document.addEventListener("DOMContentLoaded", function() {
+            showSlides(0);
+        });
+    </script>
     <!--End of Destinations-->
     <div class="divider"></div>
     <!--News-->
@@ -151,38 +353,38 @@
         <h1>Tin tức du lịch</h1>
         <div class="news-content">
             <div class="news-item">
-                <img src="img/2-3.jpg" alt="News 1">
+                <img src="img/news/news1/trungquoc1.png" alt="News 1">
                 <div class="news-info">
                     <h2>Top 10 thảo nguyên đẹp nhất Trung Quốc</h2>
                     <p>Giữa không gian rộng lớn của đất trời phương Đông, những
                       thảo nguyên trải dài bất tận ở Trung Quốc mang trong mình
                       vẻ đẹp hoang sơ, thanh bình và đầy mê hoặc. Dù mỗi nơi có
                       nét riêng...</p>
-                    <a href="#">xem thêm</a>
+                    <a href="news/top10_trung_quoc.html">xem thêm</a>
                 </div>
             </div>
             <div class="news-item">
-                <img src="img/2-3.jpg" alt="News 2">
+                <img src="img/news/news2/saigon1.png" alt="News 2">
                 <div class="news-info">
                     <h2>Món ăn đường phố Sài Gòn: 10 đặc sản phải thử khi du lịch Lễ 30/4</h2>
                     <p>Nếu bạn đang chuẩn bị đến Sài Gòn xem diễu binh 30/4 kỷ niệm 50 năm Ngày Giải phóng miền Nam, thống nhất đất nước (30/4/1975 – 30/4/2025), thì đừng bỏ qua cơ hội khám phá...</p>
-                    <a href="#">xem thêm</a>
+                    <a href="news/top_sai_gon.html">xem thêm</a>
                 </div>
             </div>
             <div class="news-item">
-                <img src="img/2-3.jpg" alt="News 3">
+                <img src="img/news/news3/caobang1.jpg" alt="News 3">
                 <div class="news-info">
                     <h2>Top 5 món ăn ở Cao Bằng mang đậm hương sắc miền non nước</h2>
                     <p>Cao Bằng nổi bật như một thiên đường ẩm thực, nơi du khách có thể thưởng thức những món ăn đặc sắc được chế biến từ các nguyên liệu tươi ngon, đặc trưng của vùng núi phía Bắc. Đây là một điểm đến lý tưởng dành cho những ai đam mê khám phá văn hóa...</p>
-                    <a href="#">xem thêm</a>
+                    <a href="news/top5_cao_bang.html">xem thêm</a>
                 </div>
             </div>
             <div class="news-item">
-                <img src="img/2-3.jpg" alt="News 4">
+                <img src="img/news/news4/india1.png" alt="News 4">
                 <div class="news-info">
                     <h2>Top 5 ngôi chùa nổi tiếng ở Ấn Độ thu hút hàng triệu tín đồ mỗi năm</h2>
                     <p>Ấn Độ, vùng đất của tâm linh và tín ngưỡng, là nơi hội tụ của nhiều nền tôn giáo lớn trên thế giới, đặc biệt là Ấn Độ giáo và Phật giáo. Trong hàng ngàn ngôi đền, ngôi chùa trải dài khắp quốc gia này, có những nơi không chỉ nổi bật về giá trị tôn giáo mà còn là kiệt tá...</p>
-                    <a href="#">xem thêm</a>
+                    <a href="news/top_an_do.html">xem thêm</a>
                 </div>
             </div>
         </div>
@@ -246,6 +448,6 @@
         </div>
       </footer>
     <script src="js/script.js"></script>
-    
+    <script src="js/responsive.js"></script>
     </body>
 </html>
