--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
       </div>
     <nav id="navbar">
       <ul class="nav_links">
-        <li><a href="./about.html">Giới thiệu</a></li>
+        <li><a href="/about.html">Giới thiệu</a></li>
         <li>
           <a href="/destination.html">Điểm đến</a>
           <div class="sub_menu">
@@ -80,9 +80,8 @@
    <section class ="news">
     <a href="/news/top10_trung_quoc.html" target="_blank" style="all: unset; cursor: pointer;">
       <div class="box">
-       
         <div class="left">
-          <img class="pic1" src="img/news1/trungquoc5.png" alt="pic1">
+          <img class="pic1" src="img/news/news1/trungquoc1.png" alt="pic1">
         </div>
         <div class="right">
           <div class="title">
@@ -101,13 +100,12 @@
         </a> 
           <button onclick="window.location.href='/news/top10_trung_quoc.html'" class="btn">Tìm hiểu thêm</button>
         </div>
- 
       </div>
 
       <a href="/news/top_sai_gon.html" target="_blank" style="all: unset; cursor: pointer;">
       <div class="box">
         <div class="left">
-          <img class="pic1" src="/img/news2/saigon1.png" alt="pic1">
+          <img class="pic1" src="img/news/news2/saigon1.png" alt="pic1">
         </div>
         <div class="right">
           <div class="title">
@@ -127,7 +125,7 @@
       <a href="/news/top5_cao_bang.html" target="_blank" style="all: unset; cursor: pointer;">
       <div class="box">
         <div class="left">
-          <img class="pic1" src="/img/news3/caobang4.jpg" alt="pic1">
+          <img class="pic1" src="img/news/news3/caobang4.jpg" alt="pic1">
         </div>
         <div class="right">
           <div class="title">
@@ -147,7 +145,7 @@
       <a href="/news/top_an_do.html" target="_blank" style="all: unset; cursor: pointer;">     
       <div class="box">
         <div class="left">
-          <img class="pic1" src="/img/news4/india3.png" alt="pic1">
+          <img class="pic1" src="img/news/news4/india3.png" alt="pic1">
         </div>
         <div class="right">
           <div class="title">
@@ -166,7 +164,7 @@
       <a href="/news/du_lich_phu_quoc.html" target="_blank" style="all: unset; cursor: pointer;">     
         <div class="box">
           <div class="left">
-            <img class="pic1" src="/img/news5/phuquoc1.png" alt="pic1">
+            <img class="pic1" src="img/news/news5/phuquoc1.png" alt="pic1">
           </div>
           <div class="right">
             <div class="title">
@@ -235,7 +233,7 @@
           <strong><a href="des-oversea.html">Du lịch nước ngoài</a></strong>
           <ul>
             <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
-            <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
+            <li><a href="destinations/sub_overseas/asian.html">Châu Á</li></a>
             <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
           </ul>
         </div>
