--- a/des-oversea.html
+++ b/des-oversea.html
@@ -122,9 +122,9 @@
             </form>
         </aside>
         <!-- Tour-list -->
-        <section class="tour-list">
+        <section class="tour-list" id="tour-list">
             <!-- Tour 1: Châu Á -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="20to50" data-departure="Hà Nội" data-type="standard" data-destination="Châu Á">
                 <img src="/img/info/des_banner/tokyo.jpg" alt="Tour Tokyo">
                 <div class="tour-info">
                   <div>
@@ -163,7 +163,7 @@
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiêu chuẩn</div>
             </div>
             <!-- Tour 2: Châu Âu -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="20to50" data-departure="Hà Nội" data-type="vip" data-destination="Châu Âu">
                 <img src="/img/info/des_banner/paris.jpg" alt="Tour Paris">
                 <div class="tour-info">
                   <div>
@@ -202,7 +202,7 @@
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
             </div>
             <!-- Tour 3: Châu Mỹ -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="vip" data-destination="Châu Mỹ">
                 <img src="/img/info/des_banner/newyork.jpg" alt="Tour New York">
                 <div class="tour-info">
                   <div>
@@ -241,7 +241,7 @@
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
             </div>
             <!-- Tour 4: Châu Á -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="under20" data-departure="Hà Nội" data-type="standard" data-destination="Châu Á">
                 <img src="/img/info/des_banner/seoul.jpg" alt="Tour Seoul">
                 <div class="tour-info">
                     <div>
@@ -280,7 +280,7 @@
             </div>
 
             <!-- Tour 5: Châu Âu -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="vip" data-destination="Châu Âu">
                 <img src="/img/info/des_banner/rome.jpg" alt="Tour Rome">
                 <div class="tour-info">
                     <div>
@@ -319,7 +319,7 @@
             </div>
 
             <!-- Tour 6: Châu Mỹ -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="vip" data-destination="Châu Mỹ">
                 <img src="/img/info/des_banner/rio.jpg" alt="Tour Rio de Janeiro">
                 <div class="tour-info">
                     <div>
@@ -357,7 +357,7 @@
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
             </div>
             <!-- Tour 7: Châu Á -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="under20" data-departure="Hà Nội" data-type="budget" data-destination="Châu Á">
                 <img src="/img/info/des_banner/bangkok.jpg" alt="Tour Bangkok">
                 <div class="tour-info">
                     <div>
@@ -396,7 +396,7 @@
             </div>
 
             <!-- Tour 8: Châu Âu -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="standard" data-destination="Châu Âu">
                 <img src="/img/info/des_banner/london.jpg" alt="Tour London">
                 <div class="tour-info">
                     <div>
@@ -435,7 +435,7 @@
             </div>
 
             <!-- Tour 9: Châu Mỹ -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="vip" data-destination="Châu Mỹ">
                 <img src="/img/info/des_banner/losangeles.jpg" alt="Tour Los Angeles">
                 <div class="tour-info">
                     <div>
@@ -474,7 +474,7 @@
             </div>
 
             <!-- Tour 10: Châu Á -->
-            <div class="tour-card">
+            <div class="tour-card" data-budget="under20" data-departure="Hà Nội" data-type="budget" data-destination="Châu Á">
                 <img src="/img/info/des_banner/singapore.jpg" alt="Tour Singapore">
                 <div class="tour-info">
                     <div>
@@ -579,5 +579,34 @@
   </footer>
     <script src="js/script.js"></script>
     <script src="js/responsive.js"></script>
+    <script>
+    // Bộ lọc tour cho trang nước ngoài
+    document.getElementById('filterForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      // Budget
+      let budget = null;
+      document.querySelectorAll('.toggle-buttons[data-group="budget"] .toggle-btn').forEach(btn => {
+        if (btn.classList.contains('active')) budget = btn.getAttribute('data-value');
+      });
+      // Departure
+      let departure = document.querySelectorAll('.sel')[0].value;
+      // Destination
+      let destination = document.querySelectorAll('.sel')[1].value;
+      // Type
+      let type = null;
+      document.querySelectorAll('.toggle-buttons[data-group="type"] .toggle-btn').forEach(btn => {
+        if (btn.classList.contains('active')) type = btn.getAttribute('data-value');
+      });
+
+      document.querySelectorAll('#tour-list .tour-card').forEach(card => {
+        let match = true;
+        if (budget && card.getAttribute('data-budget') !== budget) match = false;
+        if (departure !== 'Tất cả' && card.getAttribute('data-departure') !== departure) match = false;
+        if (destination !== 'Tất cả' && card.getAttribute('data-destination') !== destination) match = false;
+        if (type && card.getAttribute('data-type') !== type) match = false;
+        card.style.display = match ? '' : 'none';
+      });
+    });
+    </script>
 </body>
 </html>
